Fix user nav overflow bug on ipad (#16702)

--- a/app/assets/stylesheets/common/base/user.scss
+++ b/app/assets/stylesheets/common/base/user.scss
@@ -13,6 +13,10 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+
+    .nav-pills {
+      flex-wrap: wrap;
+    }
   }
   .user-secondary-navigation {
     grid-column-start: 1;
